[package]
name = "cell"
version = "0.2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
memmap2 = "0.9"
rand = "0.8"
anyhow = "1"
wasmtime = { version = "28.0", optional = true }

[features]
wasm = ["dep:wasmtime"]
rusty = []

[lib]
crate-type = ["cdylib"]
